--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,9 @@ version = "1.3.1"
 [dependencies.crossbeam]
 version = "0.7.3"
 
+[dependencies.ordered-float]
+version = "2.0.0"
+
 [[bin]]
 name = "clique_miner"
 path = "src/clique_miner.rs"
