--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,9 @@ version = "0.2.1"
 [dependencies.itertools]
 version = "0.9.0"
 
+[dependencies.priority-queue]
+version =  "1.1.0"
+
 [[bin]]
 name = "clique_miner"
 path = "src/clique_miner.rs"
