--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,3 +81,7 @@ path = "src/core_miner.rs"
 [[bin]]
 name = "connected_component_extractor"
 path = "src/connected_component_extractor.rs"
+
+[[bin]]
+name = "kpeak_miner"
+path = "src/kpeak_miner.rs"
