--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,9 @@ version = "0.9.0"
 [dependencies.priority-queue]
 version =  "1.1.0"
 
+[dependencies.roaring]
+version = "0.9.0"
+
 [[bin]]
 name = "clique_miner"
 path = "src/clique_miner.rs"
